--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,6 +1,8 @@
 name: Push Image
 on:
   workflow_dispatch:
+  schedule:
+    - cron: '0 23 * * 1'
   push:
     paths-ignore:
       - 'README.adoc'
