--- a/renovate.json
+++ b/renovate.json
@@ -2,5 +2,17 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
     "local>jeichler/renovate-bot"
+  ],
+  "regexManagers": [
+    {
+      "fileMatch": [
+        "^execution-environment\\.yml$"
+      ],
+      "matchStrings": [
+        "EE_BASE_IMAGE:[\\W]*(?<depName>.*?):(?<currentValue>.*?)[\\W]*\\n"
+      ],
+      "datasourceTemplate": "docker",
+      "versioningTemplate": "semver"
+    }
   ]
 }
