--- a/execution-environment.yml
+++ b/execution-environment.yml
@@ -2,6 +2,7 @@
 version: 1
 
 build_arg_defaults:
+  # renovate: datasource=docker depName=quay.io/ansible/creator-ee
   EE_BASE_IMAGE: 'quay.io/ansible/creator-ee:latest'
 
 dependencies:
