--- a/renovate.json
+++ b/renovate.json
@@ -11,7 +11,7 @@
       "matchStrings": [
         "EE_BASE_IMAGE: (?<depName>\\S*):(?<currentValue>\\S*)"
       ],
-      "datasourceTemplate": "docker",
+      "datasourceTemplate": "docker"
     }
   ]
 }
