--- a/renovate.json
+++ b/renovate.json
@@ -9,7 +9,7 @@
         "^execution-environment\\.yml$"
       ],
       "matchStrings": [
-        "EE_BASE_IMAGE: (?<depName>.*?):(?<currentValue>.*?)"
+        "EE_BASE_IMAGE:[\\W]*(?<depName>.*?):(?<currentValue>.*?)[\\W]*\\n"
       ],
       "datasourceTemplate": "docker"
     }
