--- a/execution-environment.yml
+++ b/execution-environment.yml
@@ -2,7 +2,7 @@
 version: 1
 
 build_arg_defaults:
-  EE_BASE_IMAGE: quay.io/ansible/creator-ee:latest
+  EE_BASE_IMAGE: quay.io/ansible/creator-ee:v0.18.0
 
 dependencies:
   galaxy: requirements.yml
